2004-07-28  Laurent Dhima  <laurenti@alblinux.net>

	* sq.po: Updated Albanian translation.

2004-07-21  Guntupalli Karunakar  <karunakar@freedomink.org>

        * hi.po: Updated Hindi translation.

2004-07-21  Alexander Shopov  <ash@contact.bg>

	* bg.po: Updated Bulgarian translation by
	Vladimir "Kaladan" Petkov <vpetkov@i-space.org>

2004-06-26  John C Barstow  <jbowtie@amathaine.com>

	* mi.po: Translation added.

2004-05-24  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* tg.po: Added Tajik file

2004-05-24  Alexander Shopov  <ash@contact.bg>

	* bg.po: Updated Bulgarian translation
	by  Vladimir "Kaladan" Petkov <vpetkov@i-space.org>

2004-04-27  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* eu.po: Added Basque file
	* ka.po: Added Georgian file

2004-04-25  Christophe Merlet  <redfox@redfoxcenter.org>

	* fr.po: Updated French translation.

2004-04-24  Andras Timar  <timar@gnome.hu>

	* hu.po: Updated Hungarian translation.

2004-04-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* th.po: Fix spellings.

2004-04-08  Guntupalli Karunakar  <karunakar@freedomink.org>

	* gu.po: Added Gujurati translation by
        Gujarati Team <magnet@magnet-i.com>.

2004-04-04  Samúel Jón Gunnarsson  <sammi@techattack.nu>

	* is.po: Updated Icelandic translation by
	Helgi Þormar Þorbjörnsson  <helgi@trance.is>
	
2004-03-31  Christian Rose  <menthos@menthos.com>

	* af.po: Added Afrikaans translation by
	Zuza Software Foundation <info@translate.org.za>.

2004-03-28  Robert Sedak  <robert.sedak@sk.htnet.hr>

	* hr.po: Updated Croatian translation.

2004-03-25  Andras Timar  <timar@gnome.hu>

	* hu.po: Updated Hungarian translation.

2004-03-22  Guntupalli Karunakar  <karunakar@freedomink.org>

        * pa.po: Punjabi translation by 
        Amanpreet Singh Alam <amanlinux@netscape.net>.

2004-03-21  Mugurel Tudor  <mugurelu@go.ro>

	* ro.po: Updated Romanian translation

2004-03-21  Wang Jian  <lark@linux.net.cn>

	* zh_CN.po: Updated Simplified Chinese translation by