@@ -1,20 +1,21 @@
+[encoding: UTF-8]
 # Add files with translateable strings here.
 # Please keep this file sorted alphabetically.
 data/toc.xml.in
 data/ui/yelp.glade
 src/GNOME_Yelp.server.in
 src/yelp-base.c
-src/yelp-db-pager.c
 src/yelp-db2html.c
+src/yelp-db-pager.c
 src/yelp-error.c
 src/yelp-history.c
 src/yelp-info.c
 src/yelp-main.c
 src/yelp-man.c
+src/yelp-man-pager.c
 src/yelp-pager.c
 src/yelp-theme.c
 src/yelp-toc-pager.c
 src/yelp-window.c
 stylesheets/l10n.xml.in
 yelp.desktop.in
-src/yelp-man-pager.c
