@@ -1,3 +1,8 @@
+2004-08-03  Alexander Winston  <alexander.winston@comcast.net>
+
+	* POTFILES.in: Added declaration of character encoding scheme.
+	Sorted list of files.
+
 2004-07-28  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Updated Albanian translation.
